# image_pipeline

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  required.repos  uncrustify.cfg
.github/: CODEOWNERS
.github/workflows/: main.yml
buoy_color/: CMakeLists.txt  package.xml
buoy_color/config/: color_weigths.json
buoy_color/hist/: red_histograms.json  white_histograms.json  yellow_histograms.json
buoy_color/include/buoy_color/: multi_histogram_voting.hpp
buoy_color/src/: component.cpp  multi_histogram_voting.cpp
buoy_detector/: CMakeLists.txt  package.xml
buoy_detector/include/buoy_detector/: buoy_detector.hpp
buoy_detector/src/: buoy_detector.cpp
camera_info_publisher/: CMakeLists.txt  package.xml
camera_info_publisher/include/camera_info_publisher/: camera_info_publisher.hpp
camera_info_publisher/params/: camera_params.yaml
camera_info_publisher/src/: camera_info_publisher.cpp
color_enhancer/: CMakeLists.txt  package.xml
color_enhancer/include/color_enhancer/: color_enhancer.hpp
color_enhancer/libs/: CMakeLists.txt
color_enhancer/libs/simpleEnhancer/: simpleEnhancer.cpp  simpleEnhancer.hpp
color_enhancer/libs/udcp/: udcp.cpp  udcp.hpp
color_enhancer/src/: color_enhancer.cpp
image_getter/: CMakeLists.txt  package.xml
image_getter/include/image_getter/: image_getter.hpp
image_getter/src/: image_getter.cpp
image_pipeline/color_enhancer/: CMakeLists.txt  package.xml
image_pipeline/color_enhancer/include/color_enhancer/: color_enhancer.hpp
image_pipeline/color_enhancer/libs/udcp/: udcp.cpp  udcp.hpp
image_pipeline/color_enhancer/src/: color_enhancer.cpp
image_pipeline/launcher/: CMakeLists.txt  package.xml
image_pipeline/launcher/launch/: segmentation_calibrator.py  vision_pipeline_launch.py
image_pipeline/launcher/params/: config.yaml
image_pipeline/launcher/scripts/: python_img_publisher.py
image_pipeline/segmentation_calibrator/: CMakeLists.txt  package.xml
image_pipeline/segmentation_calibrator/src/: segmentation_calibrator.cpp
image_pipeline_color_enhancer/: CMakeLists.txt  package.xml
image_pipeline_color_enhancer/src/: color_enhancer.cpp
image_pipeline_launcher/: .gitignore  CMakeLists.txt
image_pipeline_launcher/include/color_enhancer/: color_enhancer.hpp
image_pipeline_launcher/params/: config.yaml
image_pipeline_launcher/scripts/: python_img_publisher.py
image_pipeline_launcher/src/: segmentation_calibrator.cpp
image_pipeline_msgs/: CMakeLists.txt  package.xml
image_pipeline_msgs/msg/: BoundingBox2D.msg  BoundingBox2DArray.msg  Buoy.msg  BuoyPosition.msg  BuoyPositionArray.msg  Colors.msg  ManipulationConsole.msg  Marker.msg  Number.msg  ObstDetectionSettings.msg  ObstDetectionStats.msg  Obstacle.msg  ObstacleArray.msg  Obstacles.msg  Pipe.msg  PipeDirection.msg  PipeLine.msg
include/segmentation_calibrator/: segmentation_calibrator.hpp
include/underwater_enhancer/: underwater_enhancer.hpp
launch/: vision_pipeline_launch.py
launcher/: CMakeLists.txt  package.xml
launcher/launch/: segmentation_calibrator.py  vision_pipeline_launch.py
launcher/params/: config.yaml
launcher/scripts/: python_img_publisher.py  python_video_publisher.py
libs/: CMakeLists.txt
libs/simpleEnhancer/: simpleEnhancer.cpp  simpleEnhancer.hpp
libs/udcp/: udcp.cpp  udcp.hpp
pipe_detector/: CMakeLists.txt  package.xml
pipe_detector/include/pipe_detector/: pipe_detector.hpp
pipe_detector/src/: pipe_detector.cpp
segmentation_calibrator/: CMakeLists.txt  package.xml
segmentation_calibrator/include/segmentation_calibrator/: segmentation_calibrator.hpp
segmentation_calibrator/src/: segmentation_calibrator.cpp
src/: color_enhancer.cpp  enhancer.cpp  main.cpp  underwater_enhancer.cpp
watchdog/: CMakeLists.txt  package.xml
watchdog/include/watchdog/: watchdog.hpp
watchdog/src/: watchdog.cpp
yolo_model/: CMakeLists.txt  package.xml
yolo_model/include/yolo_model/: yolo_model.hpp
yolo_model/libs/: CMakeLists.txt
yolo_model/libs/cuda_engine/: inference.cpp  inference.hpp
yolo_model/libs/tensorrt_engine/: README.md  yolov8.cpp  yolov8.h
yolo_model/scripts/: export_to_engine.py  export_to_onnx.py
yolo_model/src/: yolo_model.cpp
